Implement FFM code